@@ -2,8 +2,10 @@ bzr-builddeb (2.8.4) UNRELEASED; urgency=low
 
   * Add dependency on quilt. LP: #951207
   * Cope with missing tags when looking up upstream versions.
+  * Skip quilt unapplying for trees that can not be copied (such as
+    _PreviewTree). LP: #950419
 
- -- Jelmer Vernooij <jelmer@debian.org>  Tue, 06 Mar 2012 13:52:37 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Tue, 13 Mar 2012 16:22:40 +0100
 
 bzr-builddeb (2.8.3) unstable; urgency=low
 
